# minecraft-clone

./: .gitignore  CMakeLists.txt  README.md  SetupGuide.md  TechnicalDocumentation.md  TechnologyJustification.md
src/: BlockType.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextRenderer.cpp  TextRenderer.h  World.cpp  World.h  main.cpp
src/shaders/: crosshair.frag  crosshair.vert  simple.frag  simple.vert  text.frag
